# constraint

./: Constraint.hs  ConstraintClass.hs  Possible.hs  Sudoku.hs  constraint-system.cabal
Data/: Constraint.hs  ConstraintSystem.hs
Data/Constraint/: Domain.hs
Data/ConstraintSystem/: Constraint.hs  Domain.hs
Data/ConstraintSystem/Constraint/: Finite.hs
Data/ConstraintSystem/Domain/: Integer.hs  Named.hs
Data/ConstraintSystem/Example/: Farmer.hs  Sudoku.hs
