Name:           constraint-system
Version:        0.0.1
Cabal-Version:  >= 1.9
License:        GPL-3
License-File:   COPYING
Author:         Josh Burroughs<josh at qhool dot com>
Maintainer:     Josh Burroughs<josh at qhool dot com>
Copyright:      Josh Burroughs 2012
Stability:      Experimental
Build-type:     Simple

library
        exposed-modules:
                Data.ConstraintSystem,
                Data.ConstraintSystem.Domain
                Data.ConstraintSystem.Domain.Integer
                Data.ConstraintSystem.Domain.Named

        build-depends:  base, containers, type-level, data-type
